--- a/event.html
+++ b/event.html
@@ -4,17 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Event | F4NN</title>
+    <link href="assets/css/estyle.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
   <body>
     <header>
-      <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="navbar-inner" style="background:transparent;">
-                <div class="container">
-                    <a class="brand" href="index.html">back</a>
-                </div>
-            </div>
+      <div class="container">
+        <div class="center">
+          <button href="index.html">Centered Button</button>
         </div>
+      </div>
     </header>
     <img src="assets/img/under construction.jpg" alt="construction-website" style="width:100%;height:fit;">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
