--- a/event.html
+++ b/event.html
@@ -5,9 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Event | F4NN</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <style>
+      body {
+        background-image: url("assets/img/construct-bg");
+      }
+    </style>
   </head>
   <body>
-    <img src="assets/img/under construction.jpg" alt="construction-website" style="width:100%;height:fit;">
+    <main>
+      <container style="background">
+        <row>
+          <div class="d-flex justify-content-center">Sorry, The sites under construction</div>
+        </row>
+      </container>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
