--- a/event.html
+++ b/event.html
@@ -5,15 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Event | F4NN</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <style>
-      body {
-        background-image: url("assets/img/construct-bg");
-      }
-    </style>
   </head>
   <body>
     <main>
-      <container style="background">
+      <container style="background-image: url("assets/img/construct-bg");">
         <row>
           <div class="d-flex justify-content-center">Sorry, The sites under construction</div>
         </row>
