--- a/event.html
+++ b/event.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <container style="background-image: url("assets/img/construct-bg.jpg");">
+      <container style="background-image: url("assets/img/construct-bg.jpg");height: 100%;">
         <row>
           <div class="d-flex justify-content-center">Sorry, The sites under construction</div>
         </row>
