--- a/event.html
+++ b/event.html
@@ -6,9 +6,9 @@
     <title>Event | F4NN</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
-  <body>
+  <body style="background-image: url("assets/img/construct-bg.jpg");height: 100%;">
     <main>
-      <container style="background-image: url("assets/img/construct-bg.jpg");height: 100%;">
+      <container>
         <row>
           <div class="d-flex justify-content-center">Sorry, The sites under construction</div>
         </row>
