--- a/event.html
+++ b/event.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Event | F4NN</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <style>
+      body{
+       background-image: url("assets/img/construct-bg.jpg");
+        height: 100%; 
+      }
+    </style>
   </head>
-  <body style="background-image: url("assets/img/construct-bg.jpg");height: 100%;">
+  <body>
     <main>
       <container>
         <row>
