--- a/event.html
+++ b/event.html
@@ -16,7 +16,7 @@
     <main>
       <container>
         <row>
-          <div class="d-flex justify-content-center">Sorry, The sites under construction</div>
+          <div class="h-100 d-flex align-items-center justify-content-center">Sorry, The sites under construction</div>
         </row>
       </container>
     </main>
