--- a/event.html
+++ b/event.html
@@ -16,7 +16,10 @@
     <main>
       <container>
         <row>
-          <div class="h-100 d-flex align-items-center justify-content-center">Sorry, The sites under construction</div>
+          <div class="h-100 d-flex align-items-center justify-content-center">
+            <h1 style="color: white">Sorry</h1>
+            <h2 style="color: white">The sites under construction</h2>
+          </div>
         </row>
       </container>
     </main>
