--- a/event.html
+++ b/event.html
@@ -17,8 +17,9 @@
       <container>
         <row>
           <div class="h-100 d-flex align-items-center justify-content-center">
-            <h1 style="color: white">Sorry</h1>
-            <h2 style="color: white">The sites under construction</h2>
+            <h1 style="color: white"><center>Sorry</center></h1>
+            <br>
+            <h4 style="color: white"><center>The sites under construction</center></h2>
           </div>
         </row>
       </container>
