--- a/event.html
+++ b/event.html
@@ -3,27 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Event | F4NN</title>
+    <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <style>
-      body{
-       background-image: url("assets/img/construct-bg.jpg");
-        height: 100%; 
+      body {
+        margin: 0;
+        padding: 0;
+        background-image: url("assets/img/construct-bg.jpg");
+      }
+      h1 {
+        color: white;
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: transLateX(-50%) transLateY(-50%);
       }
     </style>
   </head>
   <body>
-    <main>
-      <container>
-        <row>
-          <div class="h-100 d-flex align-items-center justify-content-center">
-            <h1 style="color: white"><center>Sorry</center></h1>
-            <br>
-            <h4 style="color: white"><center>The sites under construction</center></h2>
-          </div>
-        </row>
-      </container>
-    </main>
+    <h1>Sorry<br>The sites under construction</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
