--- a/event.html
+++ b/event.html
@@ -22,7 +22,7 @@
     </style>
   </head>
   <body>
-    <h1>Sorry<br>The sites under construction</h1>
+    <h1>Sorry,<br>The sites under construction</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
