--- a/event.html
+++ b/event.html
@@ -10,6 +10,8 @@
         margin: 0;
         padding: 0;
         background-image: url("assets/img/construct-bg.jpg");
+        background-repeat: no-repeat;
+        background-size: auto;
       }
       h1 {
         color: white;
