--- a/event.html
+++ b/event.html
@@ -11,7 +11,7 @@
         padding: 0;
         background-image: url("assets/img/construct-bg.jpg");
         background-repeat: no-repeat;
-        background-size: 100% 100%;
+        background-size: 100%;
       }
       h1 {
         color: white;
