--- a/event.html
+++ b/event.html
@@ -10,8 +10,8 @@
         margin: 0;
         padding: 0;
         background-image: url("assets/img/construct-bg.jpg");
-        background-repeat: no-repeat;
-        background-size: 100%;
+        background-repeat: repeat;
+        background-size: cover;
       }
       h1 {
         color: white;
