--- a/event.html
+++ b/event.html
@@ -13,7 +13,7 @@
         background-repeat: repeat;
         background-size: cover;
       }
-      h1 {
+      tengah {
         color: white;
         text-align: center;
         position: absolute;
@@ -24,7 +24,12 @@
     </style>
   </head>
   <body>
-    <h1>Sorry,<br>The sites under construction</h1>
+    <div class="tengah">
+      <h1>Sorry,</h1>
+      <br>
+      <h4>The sites under construction</h4>
+      <a type="button" class="btn btn-light">Back</a>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
