class update css

--- a/event.html
+++ b/event.html
@@ -13,7 +13,7 @@
         background-repeat: repeat;
         background-size: cover;
       }
-      tengah {
+      .tengah {
         color: white;
         text-align: center;
         position: absolute;
