--- a/event.html
+++ b/event.html
@@ -28,7 +28,7 @@
       <h1>Sorry,</h1>
       <h2>The sites under construction</h2>
       <br>
-      <a type="button" class="btn btn-light">Back</a>
+      <a href="index.html" type="button" class="btn btn-light">Back</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
