--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Irfan</span><br> IT Support Staff</h1>
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Irfan</span><br> IT Support Staff<br>and<br>technician</h1>
                     <a href="#contact" class="button">Contact</a>
                 </div>
 
