--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bxs-paint skills__icon'></i>
-                                <span class="skills__name">UX/UI</span>
+                                <i class='bx bxs-device skills__icon'></i>
+                                <span class="skills__name">IoT</span>
                             </div>
                             <div class="skills__bar skills__ux">
                                 
