--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bxs-device skills__icon'></i>
+                                <i class='bx bxs-devices skills__icon'></i>
                                 <span class="skills__name">IoT</span>
                             </div>
                             <div class="skills__bar skills__ux">
