--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 															<i class='bx bxs-bug'></i>
 															<span class="skills__name">Maintain and Repair IT Device</span>
 													</div>
-													<div class="skills__bar skills__ux">
+													<div class="skills__bar skills__mr">
 															
 													</div>
 													<div>
