--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         </div>
 												<div class="skills__data">
 													<div class="skills__names">
-															<i class='bx bxs-bug'></i>
+															<i class='bx bxs-bug skills__icon'></i>
 															<span class="skills__name">Maintain and Repair IT Device</span>
 													</div>
 													<div class="skills__bar skills__mr">
