--- a/event.html
+++ b/event.html
@@ -9,7 +9,7 @@
       body {
         margin: 0;
         padding: 0;
-        background-image: url("assets/img/construct-bg.jpg");
+        background-image: url("assets/img/construct-bg-min.jpg");
         background-repeat: repeat;
         background-size: cover;
       }
