--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                        <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
+                        <li class="nav__item"><a href="#work" class="nav__link">Career Path</a></li>
                         <li class="nav__item"><a href="assets/doc/cv.pdf" class="nav__link" download>CV</a></li>
                         <li class="nav__item"><a href="event.html" class="nav__link_special">Event</a></li>
                     </ul>
