--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <h2 class="section-title">Work</h2>
 
                 <div class="work__container bd-grid">
-                    <a href="" class="work__img">
+                    <a href="w1.html" class="work__img">
                         <img src="assets/img/work1.jpg" alt="">
                     </a>
                     <a href="" class="work__img">
