change href logo

--- a/w1.html
+++ b/w1.html
@@ -16,7 +16,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Irfan</a>
+                    <a href="https://f4nn.netlify.app" class="nav__logo">Irfan</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
