--- a/w1.html
+++ b/w1.html
@@ -39,9 +39,8 @@
         <main class="l-main">
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
-                <h2 class="section-title">
-                    try
-                </h2>
+                <h2 class="section-title">Profile SMK YPT Tegal</h2>
+                <h5>SMK YPT TEGAL</h5><p>adalah salah satu sekolah menengan kejuruan yang ada di kota Tegal.</p>
             </section>
 
             <!--===== ABOUT =====-->
