wrong place bold

--- a/w1.html
+++ b/w1.html
@@ -40,7 +40,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <h2 class="section-title">Profile SMK YPT Tegal</h2>
-                <b>SMK YPT TEGAL</b><p>adalah salah satu sekolah menengan kejuruan yang ada di kota Tegal.</p>
+                <p></p><b>SMK YPT TEGAL</b>adalah salah satu sekolah menengan kejuruan yang ada di kota Tegal.</p>
             </section>
 
             <!--===== ABOUT =====-->
