--- a/w1.html
+++ b/w1.html
@@ -21,7 +21,7 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
+                        <li class="nav__item"><a href="#cprofile" class="nav__link active">Profile</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">Career Path</a></li>
@@ -37,10 +37,15 @@
         </header>
 
         <main class="l-main">
-            <!--===== HOME =====-->
-            <section class="home bd-grid" id="home">
+            <!--===== cprofile =====-->
+            <section class="cprofile bd-grid" id="cprofile">
                 <h2 class="section-title">Profile SMK YPT Tegal</h2>
-                <p></p><b>SMK YPT TEGAL</b>adalah salah satu sekolah menengan kejuruan yang ada di kota Tegal.</p>
+                <p><b>SMK YPT TEGAL</b> adalah salah satu sekolah menengan kejuruan yang ada di kota Tegal.
+                Berdiri pada tanggal 4 September 1966 dengan nama STM Negeri Perkapalan Tegal cabang Semarang 
+                diresmikan dengan dua jurusan, yaitu jurusan Mesin Kapal dan Bangunan Kapal. Setelah mengalami beberapa
+                perpindahan lokasi, akhirnya pada tahun 1971/1972 STM Negeri Perkapalan Tegal cabang Semarang harus
+                pindah ke jalan Setiabudi dan berganti nama menjadi SMK YPT dibawah Yayasan Perguruan Teknologi (YAPERTEK).
+                </p>
             </section>
 
             <!--===== ABOUT =====-->
