--- a/w1.html
+++ b/w1.html
@@ -45,6 +45,7 @@
                 diresmikan dengan dua jurusan, yaitu jurusan Mesin Kapal dan Bangunan Kapal. Setelah mengalami beberapa
                 perpindahan lokasi, akhirnya pada tahun 1971/1972 STM Negeri Perkapalan Tegal cabang Semarang harus
                 pindah ke jalan Setiabudi dan berganti nama menjadi SMK YPT dibawah Yayasan Perguruan Teknologi (YAPERTEK).
+                Kemudian ditetapkan jurusan yang ditawarkan adalah : 1) Teknik Otomotif, 2) Teknik Audio Video, 3) Mekanik Industri 4) Rekayasa Perangkat Lunak.
                 </p>
             </section>
 
