--- a/w1.html
+++ b/w1.html
@@ -39,19 +39,27 @@
         <main class="l-main">
             <!--===== cprofile =====-->
             <section class="cprofile bd-grid" id="cprofile">
-                <h2 class="section-title">Profile SMK YPT Tegal</h2>
-                <p><b>SMK YPT TEGAL</b> adalah salah satu sekolah menengan kejuruan yang ada di kota Tegal.
-                Berdiri pada tanggal 4 September 1966 dengan nama STM Negeri Perkapalan Tegal cabang Semarang 
-                diresmikan dengan dua jurusan, yaitu jurusan Mesin Kapal dan Bangunan Kapal. Setelah mengalami beberapa
-                perpindahan lokasi, akhirnya pada tahun 1971/1972 STM Negeri Perkapalan Tegal cabang Semarang harus
-                pindah ke jalan Setiabudi dan berganti nama menjadi SMK YPT dibawah Yayasan Perguruan Teknologi (YAPERTEK).
-                Kemudian ditetapkan jurusan yang ditawarkan adalah : 1) Teknik Otomotif, 2) Teknik Audio Video, 3) Mekanik Industri 4) Rekayasa Perangkat Lunak.
-                </p>
+                <h2 class="section-title">Profil SMK YPT Tegal</h2>
+                <div class="about__container bd-grid">
+                    <div class="about__img">
+                        <img src="assets/img/work1.jpg" alt="">
+                    </div>
+                    
+                    <div>
+                        <h2 class="about__subtitle">I'am Irfan</h2>
+                        <p class="about__text"><b>SMK YPT TEGAL</b> adalah salah satu sekolah menengan kejuruan yang ada di kota Tegal.
+                        Berdiri pada tanggal 4 September 1966 dengan nama STM Negeri Perkapalan Tegal cabang Semarang 
+                        diresmikan dengan dua jurusan, yaitu jurusan Mesin Kapal dan Bangunan Kapal. Setelah mengalami beberapa
+                        perpindahan lokasi, akhirnya pada tahun 1971/1972 STM Negeri Perkapalan Tegal cabang Semarang harus
+                        pindah ke jalan Setiabudi dan berganti nama menjadi SMK YPT dibawah Yayasan Perguruan Teknologi (YAPERTEK).
+                        Kemudian ditetapkan jurusan yang ditawarkan adalah : 1) Teknik Otomotif, 2) Teknik Audio Video, 3) Mekanik Industri 4) Rekayasa Perangkat Lunak.</p>           
+                    </div>                                   
+                </div>
             </section>
 
             <!--===== ABOUT =====-->
             <section class="about section " id="about">
-                <h2 class="section-title">About</h2>
+                <h2 class="section-title">Tugas</h2>
 
                 
             </section>
@@ -72,7 +80,7 @@
 
             <!--===== CONTACT =====-->
             <section class="contact section" id="contact">
-                <h2 class="section-title">Contact</h2>
+                <h2 class="section-title">Peta</h2>
 
                 <div class="maps__container">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.2441821972534!2d109.13762767435118!3d-6.861312093137208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6fb7788a5c71f5%3A0xc88459669432919!2sSMK%20YPT%20Kota%20Tegal!5e0!3m2!1sid!2sid!4v1755666018255!5m2!1sid!2sid"
