--- a/w1.html
+++ b/w1.html
@@ -66,25 +66,25 @@
                         <!-- <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p> -->
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bxl-html5 skills__icon'></i>
+                                <i class='bx bx-user-voice skills__icon'></i>
                                 <span class="skills__name">Membantu pembimbing di sekolah</span>
                             </div> 
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bxl-css3 skills__icon'></i>
+                                <i class='bx bx-code skills__icon'></i>
                                 <span class="skills__name">Mengajar dasar koding di visual studio</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bxs-devices skills__icon'></i>
+                                <i class='bx bx-devices skills__icon'></i>
                                 <span class="skills__name">Mengenalkan beberapa perangkat IT</span>
                             </div>
                         </div>
 						<div class="skills__data">
 							<div class="skills__names">
-								<i class='bx bxs-bug skills__icon'></i>
+								<i class='bx bxs-steps-up skills__icon'></i>
 								<span class="skills__name">Memberitahu propek lulusan RPL</span>
 							</div>
 						</div>
