--- a/w1.html
+++ b/w1.html
@@ -84,7 +84,7 @@
                         </div>
 						<div class="skills__data">
 							<div class="skills__names">
-								<i class='bx bx-steps-up skills__icon'></i>
+								<i class='bx bx-grid-circle-diagonal-right skills__icon'></i>
 								<span class="skills__name">Memberitahu propek lulusan RPL</span>
 							</div>
 						</div>
