--- a/w1.html
+++ b/w1.html
@@ -66,7 +66,7 @@
                         <!-- <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p> -->
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-user-voice skills__icon'></i>
+                                <i class='bx bx-user skills__icon'></i>
                                 <span class="skills__name">Membantu pembimbing di sekolah</span>
                             </div> 
                         </div>
@@ -84,7 +84,7 @@
                         </div>
 						<div class="skills__data">
 							<div class="skills__names">
-								<i class='bxr  bx-chart-line'  ></i>
+								<i class="bx bx-user-voice skills__icon"></i>
 								<span class="skills__name">Memberitahu propek lulusan RPL</span>
 							</div>
 						</div>
