--- a/w1.html
+++ b/w1.html
@@ -58,9 +58,16 @@
 
             <!--===== ABOUT =====-->
             <section class="about section " id="about">
+                <h2 class="section-title">Periode</h2>
+
+                <h6>01 Februari 2020 - 28 Februari 2020</h6>
+            </section>
+
+            <!--===== SKILLS =====-->
+            <section class="skills section" id="skills">
                 <h2 class="section-title">Tugas</h2>
 
-                <div class="skills__container bd-grid">          
+            <div class="skills__container bd-grid">          
                     <div>
                         <h2 class="skills__subtitle">Tugas Harian</h2>
                         <!-- <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p> -->
@@ -93,14 +100,7 @@
                     <div>              
                         <img src="assets/img/skill.jpg" alt="" class="skills__img">
                     </div>
-                </div>
-            </section>
-
-            <!--===== SKILLS =====-->
-            <section class="skills section" id="skills">
-                <h2 class="section-title">Skills</h2>
-
-                
+                </div>    
             </section>
 
             <!--===== WORK =====-->
