--- a/w1.html
+++ b/w1.html
@@ -60,7 +60,10 @@
             <section class="about section " id="about">
                 <h2 class="section-title">Periode</h2>
 
-                <h6>01 Februari 2020 - 28 Februari 2020</h6>
+                <P>01 Februari 2020 - 28 Februari 2020</P>
+                <div class="about__img">
+                    <img src="assets/img/cal2020.png" alt="">
+                </div>
             </section>
 
             <!--===== SKILLS =====-->
