--- a/w1.html
+++ b/w1.html
@@ -57,11 +57,11 @@
             </section>
 
             <!--===== ABOUT =====-->
-            <section class="about section " id="about">
+            <section class="about section " id="about" style="text-align: center;">
                 <h2 class="section-title">Periode</h2>
 
-                <P>01 Februari 2020 - 28 Februari 2020</P>
-                <div class="about__img">
+                <h3>01 Februari 2020 - 28 Februari 2020</h3>
+                <div class="cal__img">
                     <img src="assets/img/cal2020.png" alt="">
                 </div>
             </section>
