--- a/w1.html
+++ b/w1.html
@@ -61,7 +61,7 @@
                 <h2 class="section-title">Periode</h2>
 
                 <h3>01 Februari 2020 - 28 Februari 2020</h3>
-                <div class="cal__img">
+                <div class="about__img">
                     <img src="assets/img/cal2020.png" alt="">
                 </div>
             </section>
