--- a/w1.html
+++ b/w1.html
@@ -21,12 +21,10 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#cprofile" class="nav__link active">Profile</a></li>
-                        <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                        <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                        <li class="nav__item"><a href="#work" class="nav__link">Career Path</a></li>
-                        <li class="nav__item"><a href="assets/doc/cv.pdf" class="nav__link" download>CV</a></li>
-                        <li class="nav__item"><a href="event.html" class="nav__link_special">Event</a></li>
+                        <li class="nav__item"><a href="#cprofile" class="nav__link active">Profil</a></li>
+                        <li class="nav__item"><a href="#periode" class="nav__link">Periode</a></li>
+                        <li class="nav__item"><a href="#tugas" class="nav__link">Tugas</a></li>
+                        <li class="nav__item"><a href="#maps" class="nav__link">Peta</a></li>
                     </ul>
                 </div>
 
@@ -57,7 +55,7 @@
             </section>
 
             <!--===== ABOUT =====-->
-            <section class="about section " id="about" style="text-align: center;">
+            <section class="about section " id="periode" style="text-align: center;">
                 <h2 class="section-title">Periode</h2>
 
                 <h3>01 Februari 2020 - 28 Februari 2020</h3>
@@ -67,7 +65,7 @@
             </section>
 
             <!--===== SKILLS =====-->
-            <section class="skills section" id="skills">
+            <section class="skills section" id="tugas">
                 <h2 class="section-title">Tugas</h2>
 
             <div class="skills__container bd-grid">          
@@ -106,15 +104,8 @@
                 </div>    
             </section>
 
-            <!--===== WORK =====-->
-            <section class="work section" id="work">
-                <h2 class="section-title">Work</h2>
-
-                
-            </section>
-
             <!--===== CONTACT =====-->
-            <section class="contact section" id="contact">
+            <section class="contact section" id="maps">
                 <h2 class="section-title">Peta</h2>
 
                 <div class="maps__container">
