--- a/w1.html
+++ b/w1.html
@@ -25,6 +25,7 @@
                         <li class="nav__item"><a href="#periode" class="nav__link">Periode</a></li>
                         <li class="nav__item"><a href="#tugas" class="nav__link">Tugas</a></li>
                         <li class="nav__item"><a href="#maps" class="nav__link">Peta</a></li>
+                        <li class="nav__item"><a href="https://f4nn.netlify.app" class="nav__link">Kembali</a></li>
                     </ul>
                 </div>
 
