--- a/event.html
+++ b/event.html
@@ -25,8 +25,8 @@
   </head>
   <body>
     <div class="tengah">
-      <h1>Sorry,</h1>
-      <h2>The sites under construction</h2>
+      <h1>Maaf,</h1>
+      <h2>Belum ada event</h2>
       <br>
       <a href="index.html" type="button" class="btn btn-light">Back</a>
     </div>
