--- a/w1.html
+++ b/w1.html
@@ -126,9 +126,9 @@
         <footer class="footer">
             <p class="footer__title">Irfan</p>
             <div class="footer__social">
-                <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://www.linkedin.com/in/muhammad-irfan-syafiq-1020b5187/" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://www.instagram.com/f4nn18/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://github.com/f4nn18" class="footer__icon"><i class='bx bxl-github' ></i></a>
             </div>
             <p class="footer__copy">&#169; Bedimcode. All rigths reserved</p>
         </footer>
