--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
                     <a href="w1.html" class="work__img">
                         <img src="assets/img/work1.jpg" alt="">
                     </a>
-                    <a href="" class="work__img">
+                    <a href="w2.html" class="work__img">
                         <img src="assets/img/work2.jpg" alt="">
                     </a>
-                    <a href="" class="work__img">
+                    <a href="w3.html" class="work__img">
                         <img src="assets/img/work3.jpg" alt="">
                     </a>
-                    <a href="" class="work__img">
+                    <a href="w4.html" class="work__img">
                         <img src="assets/img/work4.png" alt="">
                     </a>
                     <!-- <a href="" class="work__img">
