--- a/w4.html
+++ b/w4.html
@@ -38,19 +38,15 @@
         <main class="l-main">
             <!--===== cprofile =====-->
             <section class="cprofile bd-grid" id="cprofile">
-                <h2 class="section-title">Profil SMK YPT Tegal</h2>
+                <h2 class="section-title">Profil SSI</h2>
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/work1.jpg" alt="">
+                        <img src="assets/img/work4.jpg" alt="">
                     </div>
                     
                     <div>
-                        <p class="about__text" style="text-align: justify;"><b>SMK YPT TEGAL</b> adalah salah satu sekolah menengan kejuruan yang ada di kota Tegal.
-                        Berdiri pada tanggal 4 September 1966 dengan nama STM Negeri Perkapalan Tegal cabang Semarang 
-                        diresmikan dengan dua jurusan, yaitu jurusan Mesin Kapal dan Bangunan Kapal. Setelah mengalami beberapa
-                        perpindahan lokasi, akhirnya pada tahun 1971/1972 STM Negeri Perkapalan Tegal cabang Semarang harus
-                        pindah ke jalan Setiabudi dan berganti nama menjadi SMK YPT dibawah Yayasan Perguruan Teknologi (YAPERTEK).
-                        Kemudian ditetapkan jurusan yang ditawarkan adalah : 1) Teknik Otomotif, 2) Teknik Audio Video, 3) Mekanik Industri 4) Rekayasa Perangkat Lunak.</p>           
+                        <p class="about__text" style="text-align: justify;"><b>SUMIDEN SINTERED COMPONENT INDONESIA</b> -
+                        </p>           
                     </div>                                   
                 </div>
             </section>
@@ -59,7 +55,10 @@
             <section class="about section " id="periode" style="text-align: center;">
                 <h2 class="section-title">Periode</h2>
 
-                <h3>01 Februari 2020 - 28 Februari 2020</h3>
+                <h3>Contract</h3>
+                <p style="text-align: center;">13 Juni 2024 - 12 Desember 2024</p>
+                <h3>Actual</h3>
+                <p style="text-align: center;">13 Juni 2024 - 31 Agustus 2024</p>
                 <div class="about__img">
                     <img src="assets/img/cal2020.png" alt="">
                 </div>
