--- a/w4.html
+++ b/w4.html
@@ -41,7 +41,7 @@
                 <h2 class="section-title">Profil SSI</h2>
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/work4.jpg" alt="">
+                        <img src="assets/img/work4.png" alt="">
                     </div>
                     
                     <div>
