--- a/w4.html
+++ b/w4.html
@@ -56,12 +56,11 @@
                 <h2 class="section-title">Periode</h2>
 
                 <h3>Contract</h3>
-                <p style="text-align: center;">13 Juni 2024 - 12 Desember 2024</p>
+                <h5 style="text-align: center;">13 Juni 2024 - 12 Desember 2024</h5>
                 <h3>Actual</h3>
-                <p style="text-align: center;">13 Juni 2024 - 31 Agustus 2024</p>
-                <div class="about__img">
-                    <img src="assets/img/cal2020.png" alt="">
-                </div>
+                <h5 style="text-align: center;">13 Juni 2024 - 31 Agustus 2024</h5>
+                <p class="about__text" style="text-align: center;">Kontrak terpaksa berhenti ditengah dikarenakan alasan kesehatan saya pribadi.
+                </p>
             </section>
 
             <!--===== SKILLS =====-->
