--- a/w4.html
+++ b/w4.html
@@ -95,11 +95,36 @@
 								<span class="skills__name">Memberitahu propek lulusan RPL</span>
 							</div>
 						</div>
+
+                        <div class="skills__data">
+                            <div class="skills__names">
+                                <i class='bx bx-user skills__icon'></i>
+                                <span class="skills__name">Membantu pembimbing di sekolah</span>
+                            </div> 
+                        </div>
+                        <div class="skills__data">
+                            <div class="skills__names">
+                                <i class='bx bx-code skills__icon'></i>
+                                <span class="skills__name">Mengajar dasar koding di visual studio</span>
+                            </div>
+                        </div>
+                        <div class="skills__data">
+                            <div class="skills__names">
+                                <i class='bx bx-devices skills__icon'></i>
+                                <span class="skills__name">Mengenalkan beberapa perangkat IT</span>
+                            </div>
+                        </div>
+						<div class="skills__data">
+							<div class="skills__names">
+								<i class="bx bx-user-voice skills__icon"></i>
+								<span class="skills__name">Memberitahu propek lulusan RPL</span>
+							</div>
+						</div>
                     </div>
-                    
+<!--                     
                     <div>              
                         <img src="assets/img/skill.jpg" alt="" class="skills__img">
-                    </div>
+                    </div> -->
                 </div>    
             </section>
 
