--- a/w4.html
+++ b/w4.html
@@ -69,7 +69,7 @@
 
             <div class="skills__container bd-grid">          
                     <div>
-                        <h2 class="skills__subtitle">Tugas Harian</h2>
+                        <h2 class="skills__subtitle">Tugas Utama</h2>
                         <!-- <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p> -->
                         <div class="skills__data">
                             <div class="skills__names">
@@ -95,7 +95,11 @@
 								<span class="skills__name">Memberitahu propek lulusan RPL</span>
 							</div>
 						</div>
-
+                    </div>
+                    
+                    <div>
+                        <h2 class="skills__subtitle">Tugas Tambahan</h2>
+                        <!-- <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p> -->
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-user skills__icon'></i>
@@ -121,10 +125,6 @@
 							</div>
 						</div>
                     </div>
-<!--                     
-                    <div>              
-                        <img src="assets/img/skill.jpg" alt="" class="skills__img">
-                    </div> -->
                 </div>    
             </section>
 
