--- a/w4.html
+++ b/w4.html
@@ -133,7 +133,7 @@
                 <h2 class="section-title">Peta</h2>
 
                 <div class="maps__container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.2441821972534!2d109.13762767435118!3d-6.861312093137208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6fb7788a5c71f5%3A0xc88459669432919!2sSMK%20YPT%20Kota%20Tegal!5e0!3m2!1sid!2sid!4v1755666018255!5m2!1sid!2sid"
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.1694956659576!2d107.15670747499178!3d-6.372106393618105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69997d24301f6b%3A0xe3966488be77b346!2sPT%20Sumiden%20Sintered%20Components%20Indonesia!5e0!3m2!1sid!2sid!4v1755712139596!5m2!1sid!2sid"
                         width="800"
                         height="450"
                         style="border:0;"
