--- a/w4.html
+++ b/w4.html
@@ -45,7 +45,11 @@
                     </div>
                     
                     <div>
-                        <p class="about__text" style="text-align: justify;"><b>SUMIDEN SINTERED COMPONENT INDONESIA</b> -
+                        <p class="about__text" style="text-align: justify;"><b>SUMIDEN SINTERED COMPONENT INDONESIA</b>
+                            Incorporated in 2012, PT. Sumiden Sintered Components Indonesia (SSI) is a manufacturer 
+                            of automotive component, located at Delta Silicon Industrial Park, Bekasi, Indonesia. 
+                            SSI is one of the group companies of Sumitomo Electric Industries, Ltd Japan in collaboration 
+                            with Indonesian companies.
                         </p>           
                     </div>                                   
                 </div>
