--- a/w4.html
+++ b/w4.html
@@ -77,26 +77,26 @@
                         <!-- <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p> -->
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-user skills__icon'></i>
-                                <span class="skills__name">Membantu pembimbing di sekolah</span>
+                                <i class='bx bx-dice-1 skills__icon'></i>
+                                <span class="skills__name">Provide support to all users related to IT device</span>
                             </div> 
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-code skills__icon'></i>
-                                <span class="skills__name">Mengajar dasar koding di visual studio</span>
+                                <i class='bx bx-dice-2 skills__icon'></i>
+                                <span class="skills__name">Check and prepare IT devices that will be used by users</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-devices skills__icon'></i>
-                                <span class="skills__name">Mengenalkan beberapa perangkat IT</span>
+                                <i class='bx bx-dice-3 skills__icon'></i>
+                                <span class="skills__name">Record all IT devices and users</span>
                             </div>
                         </div>
 						<div class="skills__data">
 							<div class="skills__names">
-								<i class="bx bx-user-voice skills__icon"></i>
-								<span class="skills__name">Memberitahu propek lulusan RPL</span>
+								<i class="bx bx-dice-4 skills__icon"></i>
+								<span class="skills__name">report all matters related to IT and make development plans for next month</span>
 							</div>
 						</div>
                     </div>
@@ -106,25 +106,25 @@
                         <!-- <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p> -->
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-user skills__icon'></i>
+                                <i class='bx bx-dice-1 skills__icon'></i>
                                 <span class="skills__name">Membantu pembimbing di sekolah</span>
                             </div> 
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-code skills__icon'></i>
+                                <i class='bx bx-dice-2 skills__icon'></i>
                                 <span class="skills__name">Mengajar dasar koding di visual studio</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='bx bx-devices skills__icon'></i>
+                                <i class='bx bx-dice-3 skills__icon'></i>
                                 <span class="skills__name">Mengenalkan beberapa perangkat IT</span>
                             </div>
                         </div>
 						<div class="skills__data">
 							<div class="skills__names">
-								<i class="bx bx-user-voice skills__icon"></i>
+								<i class="bx bx-dice-4 skills__icon"></i>
 								<span class="skills__name">Memberitahu propek lulusan RPL</span>
 							</div>
 						</div>
