--- a/w4.html
+++ b/w4.html
@@ -107,25 +107,25 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-dice-1 skills__icon'></i>
-                                <span class="skills__name">Membantu pembimbing di sekolah</span>
+                                <span class="skills__name">Support and provide assistance to IT Supervisor</span>
                             </div> 
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-dice-2 skills__icon'></i>
-                                <span class="skills__name">Mengajar dasar koding di visual studio</span>
+                                <span class="skills__name">Quarterly meetings with IT Consultants</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-dice-3 skills__icon'></i>
-                                <span class="skills__name">Mengenalkan beberapa perangkat IT</span>
+                                <span class="skills__name">Inform and explain regarding IT Policy updates</span>
                             </div>
                         </div>
 						<div class="skills__data">
 							<div class="skills__names">
 								<i class="bx bx-dice-4 skills__icon"></i>
-								<span class="skills__name">Memberitahu propek lulusan RPL</span>
+								<span class="skills__name">Provide support and supervision to third parties regarding the installation or repair of IT equipment.</span>
 							</div>
 						</div>
                     </div>
