change jap to skill bar

--- a/w4.html
+++ b/w4.html
@@ -79,28 +79,28 @@
                             <div class="skills__names">
                                 <i class='bx bx-dice-1 skills__icon'></i>
                                 <span class="skills__name">Provide support to all users related to IT device</span>
-                                <span class="skills__name">IT機器に関するすべてのユーザーへのサポートを提供します</span>
+                                <span class="skills__bar">IT機器に関するすべてのユーザーへのサポートを提供します</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-dice-2 skills__icon'></i>
                                 <span class="skills__name">Check and prepare IT devices that will be used by users</span>
-                                <span class="skills__name">ユーザーが使用するIT機器の確認と準備を行います</span>
+                                <span class="skills__bar">ユーザーが使用するIT機器の確認と準備を行います</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-dice-3 skills__icon'></i>
                                 <span class="skills__name">Record all IT devices and users</span>
-                                <span class="skills__name">すべてのIT機器とユーザーを記録します</span>
+                                <span class="skills__bar">すべてのIT機器とユーザーを記録します</span>
                             </div>
                         </div>
 						<div class="skills__data">
 							<div class="skills__names">
 								<i class="bx bx-dice-4 skills__icon"></i>
 								<span class="skills__name">report all matters related to IT and make development plans for next month</span>
-								<span class="skills__name">ITに関するすべての事項を報告し、翌月の開発計画を作成します</span>
+								<span class="skills__bar">ITに関するすべての事項を報告し、翌月の開発計画を作成します</span>
 							</div>
 						</div>
                     </div>
