--- a/w4.html
+++ b/w4.html
@@ -78,29 +78,29 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-dice-1 skills__icon'></i>
-                                <span class="skills__name">Provide support to all users related to IT device</span>
-                                <span class="skills__bar">IT機器に関するすべてのユーザーへのサポートを提供します</span>
+                                <span class="skills__name" style="text-align: left">Provide support to all users related to IT device</span>
+                                <span class="skills__name" style="text-align: right">IT機器に関するすべてのユーザーへのサポートを提供します</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-dice-2 skills__icon'></i>
-                                <span class="skills__name">Check and prepare IT devices that will be used by users</span>
-                                <span class="skills__bar">ユーザーが使用するIT機器の確認と準備を行います</span>
+                                <span class="skills__name" style="text-align: left">Check and prepare IT devices that will be used by users</span>
+                                <span class="skills__name" style="text-align: right">ユーザーが使用するIT機器の確認と準備を行います</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-dice-3 skills__icon'></i>
-                                <span class="skills__name">Record all IT devices and users</span>
-                                <span class="skills__bar">すべてのIT機器とユーザーを記録します</span>
+                                <span class="skills__name" style="text-align: left">Record all IT devices and users</span>
+                                <span class="skills__name" style="text-align: right">すべてのIT機器とユーザーを記録します</span>
                             </div>
                         </div>
 						<div class="skills__data">
 							<div class="skills__names">
 								<i class="bx bx-dice-4 skills__icon"></i>
-								<span class="skills__name">report all matters related to IT and make development plans for next month</span>
-								<span class="skills__bar">ITに関するすべての事項を報告し、翌月の開発計画を作成します</span>
+								<span class="skills__name" style="text-align: left">report all matters related to IT and make development plans for next month</span>
+								<span class="skills__name" style="text-align: right">ITに関するすべての事項を報告し、翌月の開発計画を作成します</span>
 							</div>
 						</div>
                     </div>
@@ -111,29 +111,29 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-dice-1 skills__icon'></i>
-                                <span class="skills__name">Support and provide assistance to IT Supervisor</span>
-                                <span class="skills__name">ITスーパーバイザーへのサポートと支援を提供します</span>
+                                <span class="skills__name" style="text-align: left">Support and provide assistance to IT Supervisor</span>
+                                <span class="skills__name" style="text-align: right">ITスーパーバイザーへのサポートと支援を提供します</span>
                             </div> 
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-dice-2 skills__icon'></i>
-                                <span class="skills__name">Quarterly meetings with IT Consultants</span>
-                                <span class="skills__name">ITコンサルタントとの四半期ごとの会議を開催します</span>
+                                <span class="skills__name" style="text-align: left">Quarterly meetings with IT Consultants</span>
+                                <span class="skills__name" style="text-align: right">ITコンサルタントとの四半期ごとの会議を開催します</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-dice-3 skills__icon'></i>
-                                <span class="skills__name">Inform and explain regarding IT Policy updates</span>
-                                <span class="skills__name">ITポリシーの更新について通知と説明を行います</span>
+                                <span class="skills__name" style="text-align: left">Inform and explain regarding IT Policy updates</span>
+                                <span class="skills__name" style="text-align: right">ITポリシーの更新について通知と説明を行います</span>
                             </div>
                         </div>
 						<div class="skills__data">
 							<div class="skills__names">
 								<i class="bx bx-dice-4 skills__icon"></i>
-								<span class="skills__name">Provide support and supervision to third parties regarding the installation or repair of IT equipment</span>
-								<span class="skills__name">IT機器の設置または修理に関して、第三者へのサポートと監督を提供します</span>
+								<span class="skills__name" style="text-align: left">Provide support and supervision to third parties regarding the installation or repair of IT equipment</span>
+								<span class="skills__name" style="text-align: right">IT機器の設置または修理に関して、第三者へのサポートと監督を提供します</span>
 							</div>
 						</div>
                     </div>
